crates/plotnik-lib/tests/02-parser/recovery_unexpected/resync_to_next_definition.txt
A = (a)
^^^
B = (b)
$$$
C = (c)
==== diagnostics ====
error: expected a pattern
 --> query.ptk:2:1
  |
2 | ^^^
  | ^^^
  |
help: try `(node)`, `[a b]`, `{a b}`, `"literal"`, or `_`

error: expected a pattern
 --> query.ptk:4:1
  |
4 | $$$
  | ^^^
  |
help: try `(node)`, `[a b]`, `{a b}`, `"literal"`, or `_`
